--- a/properties-access-service/src/main/resources/application.yml
+++ b/properties-access-service/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring :
     
   profiles :
     active : qa
+    
+management :
+  endpoints :
+    web :
+      exposure :
+        include : refresh
